limpieza specs / btn cerrar sesion

--- a/src/app/dashboard/components/toolbar/toolbar.component.html
+++ b/src/app/dashboard/components/toolbar/toolbar.component.html
@@ -13,6 +13,8 @@
     <span class="example-spacer"></span>
   </div>
   <div>
-    <button (click)="logout()">Cerrar sesión</button>
+    <button (click)="logout()" class="btnSesion" mat-icon-button>
+      Cerrar sesión
+    </button>
   </div>
 </mat-toolbar>
