--- a/src/app/dashboard/components/toolbar/toolbar.component.scss
+++ b/src/app/dashboard/components/toolbar/toolbar.component.scss
@@ -5,3 +5,11 @@
     justify-content: space-between;
     padding: 0 50px; 
    }
+
+   .btnSesion{
+    width: max-content;
+    border-radius: 28px;
+    border: 1px solid white;
+    font-size: 14px;
+    margin-right: 20px;
+   }
