--- a/src/app/dashboard/components/sidebar/sidebar.component.scss
+++ b/src/app/dashboard/components/sidebar/sidebar.component.scss
@@ -1,5 +1,4 @@
 .sidebarCont{
-    padding-top: 15px;
 
     .listItem{
         padding-left: 30px;
@@ -14,6 +13,22 @@
                 font-size: 24px;
                 margin-right: 15px;
             }
+        }
+    }
+
+    .contUser{
+        color: white;
+        background-color: rgb(62, 62, 62);
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-top: 12px;
+
+        .pUser{
+            display: flex;
+            justify-content: center;
+
         }
     }
     
