--- a/src/app/dashboard/pages/users/users.component.html
+++ b/src/app/dashboard/pages/users/users.component.html
@@ -12,3 +12,10 @@
     class="tableComponent"
   ></app-users-table>
 </div>
+<!-- 
+<app-users-table
+[dataSource]="(usuarios$ | async) || []"
+(editUser)="onEditUser($event)"
+(deleteUser)="onDeleteUser($event)"
+class="tableComponent"
+></app-users-table> -->
