--- a/src/app/dashboard/components/toolbar/toolbar.component.scss
+++ b/src/app/dashboard/components/toolbar/toolbar.component.scss
@@ -13,3 +13,9 @@
     font-size: 14px;
     margin-right: 20px;
    }
+
+   
+   .btnSesion:hover{
+    color:#07f162 ;
+    border: 1px solid #07f162;
+   }
