--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,8 +1,8 @@
 <mat-card class="px-4 py-3 cardLogin">
   <mat-card-content>
     <h2 class="titleLogin">Iniciar sesión</h2>
-    <form [formGroup]="loginForm">
-      <div class="d-flex flex-column">
+    <form [formGroup]="loginForm" class="loginForm">
+      <div>
         <!-- Email -->
         <mat-form-field class="w-100 mb-3" appearance="outline">
           <mat-label>Email</mat-label>
@@ -13,15 +13,15 @@
           <mat-label>Password</mat-label>
           <input formControlName="password" matInput type="password" />
         </mat-form-field>
-        <button
-          mat-flat-button
-          class="mt-5 py-4"
-          (click)="login()"
-          color="primary"
-        >
-          Iniciar sesión
-        </button>
       </div>
+      <button
+        mat-flat-button
+        class="mt-5 py-5 button"
+        (click)="login()"
+        color="primary"
+      >
+        Iniciar sesión
+      </button>
     </form>
   </mat-card-content>
 </mat-card>
