--- a/src/app/auth/pages/login/login.component.scss
+++ b/src/app/auth/pages/login/login.component.scss
@@ -2,6 +2,11 @@
     width: 450px;
     height: 420px;
     border-radius: 12px;
+    padding: 0px 30px;
+
+    display: flex;
+    flex-direction: column;
+
 }
 
 .titleLogin{
@@ -9,4 +14,18 @@
     color: rgb(75, 75, 75);
     font-size: 24px;
     margin-bottom: 40px;
+}
+
+.loginForm{
+    display: flex;
+    flex-direction: column;
+}
+
+.mat-mdc-form-field {
+    display: flex;
+}
+
+.button{
+    margin-top: 35px;
+    height: 40px;
 }
