--- a/src/app/dashboard/pages/equipos/equipos.component.scss
+++ b/src/app/dashboard/pages/equipos/equipos.component.scss
@@ -2,12 +2,14 @@
     align-items: center;
 
 .title{
-    color: black;
+    color: #ffffff;
     text-align: center;
-    font-size: 30px;
+    font-size: 26px;
     font-weight: 900;
-    margin-top: 45px;
-    margin-bottom: 70px;
+    margin-top: 12px;
+    margin-bottom: 50px;
+    padding-bottom: 20px;
+    border-bottom: 4px solid #08f36a;
 }
 
 .btnAdd{
