--- a/src/app/dashboard/pages/home/home.component.html
+++ b/src/app/dashboard/pages/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="contHome">
-  <h1 fontWeight="bolder" appHeadline class="title">HOME</h1>
+  <h1 fontWeight="bolder" class="title">HOME</h1>
 </div>
