--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,11 @@ html,body{ height: 100%; width: 100%; padding: 0; margin: 0; }
 // Colores
 :root {
     --primary: #07f468;
-    --bg-primary: #3f51b5;
+    --bg-primary: #2e2e48;
     --bg-secondary: #161616;
     --bg-tertiary: #22262b;
   }
 
-body { margin: 0; font-family:'Roboto', sans-serif; background-color:var(--bg-primary) ;color: rgb(255, 255, 255); }
+body { margin: 0; font-family:'Roboto', sans-serif; background-color:#1b1926;color: rgb(255, 255, 255); }
 
 
