solucionando errores styles

--- a/src/assets/styles/my-theme.scss
+++ b/src/assets/styles/my-theme.scss
@@ -42,7 +42,7 @@ $my-accent-color: (
     100 : #b5fbd2,
     200 : #84f9b5,
     300 : #52f797,
-    400 : #2df580,
+    400 : #006129,
     500 : #019a40,
     600 : #07f162,
     700 : #06ef57,
@@ -76,7 +76,7 @@ $my-warn-color: (
     200 : #84f9b5,
     300 : #52f797,
     400 : #2df580,
-    500 : #08f36a,
+    500 : #e00000,
     600 : #07f162,
     700 : #06ef57,
     800 : #04ed4d,
