--- a/src/app/dashboard/pages/users/components/users-dialog/users-dialog.component.html
+++ b/src/app/dashboard/pages/users/components/users-dialog/users-dialog.component.html
@@ -1,5 +1,8 @@
 <div class="dialogCont">
-  <h1 mat-dialog-title style="text-align: center; font-size: 27px">
+  <h1
+    mat-dialog-title
+    style="text-align: center; font-size: 27px; margin-bottom: 23px"
+  >
     {{ isEditing ? "Editar usuario" : "Crear usuario" }}
   </h1>
 
