--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/scss/bootstrap";
 
 html,body{ height: 100%; width: 100%; padding: 0; margin: 0; }
 
@@ -10,6 +11,10 @@ html,body{ height: 100%; width: 100%; padding: 0; margin: 0; }
     --bg-tertiary: #22262b;
   }
 
-body { margin: 0; font-family:'Roboto', sans-serif; background-color:#1b1926;color: rgb(255, 255, 255); }
+body { margin: 0; font-family:'Roboto', sans-serif; background-color:#1b1926;color: rgb(255, 255, 255); 
+}
 
+a{
+  text-decoration: inherit;
+}
 
